# hPlayer

./: .gitignore  README.md  hPlayer.xml  hPlayerConfigDef.xml  hPlayerMsg.xml
hPlayer/: CMakeLists.txt
hPlayer/hPlayer/: CMakeLists.txt
hPlayer/hPlayer/src/: cmdutils.h  config.h  config_components.h  exportFun.cpp  exportFun.h  ffplay.c  hPlayerUserWorkerMgr.cpp  hPlayerUserWorkerMgr.h  hPlayerWorkerMgrUser.cpp
hPlayer/hPlayer/src/audioDec/: OnCreateChannelRet.cpp  audioDecUserLogic.cpp  audioDecUserLogic.h  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
hPlayer/hPlayer/src/audioDec/playerData/: procAudioDecExitNtfAsk.cpp  procInitAudioAsk.cpp
hPlayer/hPlayer/src/audioDec/userLogic/: audioLogic.cpp  audioLogic.h
hPlayer/hPlayer/src/decoTh/: OnCreateChannelRet.cpp  decoThUserLogic.cpp  decoThUserLogic.h  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
hPlayer/hPlayer/src/decoTh/playerData/: procAudioDecExitOKNtfAsk.cpp  procMainInitOKAsk.cpp  procPlayURLAsk.cpp  procReadPackExitNtfAsk.cpp  procSeekPosAsk.cpp  procSubtitleqDecExitOKNtfAsk.cpp  procVideoDecExitOKNtfAsk.cpp
hPlayer/hPlayer/src/decoTh/userLogic/: ffmpegDecoder.cpp  ffmpegDecoder.h  readPackLogic.cpp  readPackLogic.h
hPlayer/hPlayer/src/main/: OnCreateChannelRet.cpp  mainUserLogic.cpp  mainUserLogic.h  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp
hPlayer/hPlayer/src/main/playerData/: procNeetExitNtfAsk.cpp  procPlayURLRet.cpp  procReadPackExitOKNtfAsk.cpp  procSeekPosRet.cpp
hPlayer/hPlayer/src/main/userLogic/: VulkanRenderer.cpp  VulkanRenderer.h  ffplayMain.cpp  ffplayMain.h  imGuiMgr.cpp  imGuiMgr.h  mainLogic.cpp  mainLogic.h
hPlayer/hPlayer/src/subtitleqDec/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp  subtitleqDecUserLogic.cpp  subtitleqDecUserLogic.h
hPlayer/hPlayer/src/subtitleqDec/playerData/: procSubtitleqAsk.cpp  procSubtitleqDecExitNtfAsk.cpp
hPlayer/hPlayer/src/unix/: lib.vers
hPlayer/hPlayer/src/userLogic/: baseUserLogic.cpp  baseUserLogic.h  cmdutils.cpp  cmdutils.h  comman.h  config.h  config_components.h  cppClock.cpp  cppClock.h  cppCom.cpp  cppCom.h  ffplay.cpp  ffplayCom.h  ffplay_renderer.cpp  ffplay_renderer.h  frameQue.cpp  frameQue.h  globalData.cpp  globalData.h  opt_common.cpp  packQue.cpp  packQue.h  videoPackQue.cpp  videoPackQue.h
hPlayer/hPlayer/src/userLogic/compat/: w32dlfcn.h
hPlayer/hPlayer/src/userLogic/libavutil/: getenv_utf8.h
hPlayer/hPlayer/src/videoDec/: OnCreateChannelRet.cpp  onLoopBegin.cpp  onLoopEnd.cpp  onLoopFrame.cpp  onWorkerInit.cpp  videoDecUserLogic.cpp  videoDecUserLogic.h
hPlayer/hPlayer/src/videoDec/playerData/: procInitvideoDecAsk.cpp  procVideoDecExitNtfAsk.cpp
hPlayer/hPlayer/src/videoDec/userLogic/: videoDecLogic.cpp  videoDecLogic.h
hPlayer/hPlayer/src/win/: defFun.def
